# app/Http/Controllers/SideProjectController.php
@@ -2,6 +2,7 @@
 
 namespace App\Http\Controllers;
 
+use Knuckles\Camel\Extraction\ExtractedEndpointData;
 use Knuckles\Scribe\Attributes\Authenticated;
 use Knuckles\Scribe\Attributes\ResponseFromTransformer;
 use Knuckles\Scribe\Attributes\Response;
@@ -19,7 +20,7 @@ use Knuckles\Scribe\Attributes\ResponseFromFile;
  *
  * Note how the URL params for the endpoints here are automatically generated by Scribe.
  */
-class SideProjectController extends Controller
+class SideProjectController extends CRUDController
 {
     public function __construct()
     {
@@ -94,16 +95,6 @@ class SideProjectController extends Controller
     }
 
     /**
-     * Delete a side project
-     *
-     */
-    #[Response(status: 204, description: '204, Nothing to see here')]
-    public function destroy(SideProject $sideProject)
-    {
-        //
-    }
-
-    /**
      * Finish a side project
      *
      * Will you ever?🤔
@@ -113,5 +104,28 @@ class SideProjectController extends Controller
     public function finish(SideProject $sideProject)
     {
         //
+    }
+
+    public static function inheritedDocsOverrides()
+    {
+        return [
+            "destroy" => [
+                "metadata" => [
+                    "title" => "Delete a side project",
+                ],
+                "queryParameters" => [
+                    'queryThing' => [
+                        'type' => 'string',
+                    ],
+                ],
+                "bodyParameters" => [],
+                "responses" => [
+                    [
+                        "status" => "202",
+                        "description" => "An extra, for fun.",
+                    ],
+                ],
+            ],
+        ];
     }
 }
